syntax = "proto3";

option go_package = "common-lib/gen/auth_service";

package api;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

// ========================= Register =========================
message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

// ========================= Login =========================
message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// ========================= Refresh =========================
message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token  = 1;
  string refresh_token = 2;
}
